tests/baselines/reference/types.asyncGenerators.esnext.2.errors.txt
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(2,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(8,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(10,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterableIterator<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterableIterator<数字>'.
    Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(14,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(16,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterableIterator<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterableIterator<数字>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(19,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterable<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterable<数字>'.
    Types of property '[Symbol.asyncIterator]' are incompatible.
      Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
        Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
          Types of property 'next' are incompatible.
            Type '(value?: 任意) => Promise<IteratorResult<"a">>' is not assignable to type '(value?: 任意) => Promise<IteratorResult<数字>>'.
              Type 'Promise<IteratorResult<"a">>' is not assignable to type 'Promise<IteratorResult<数字>>'.
                Type 'IteratorResult<"a">' is not assignable to type 'IteratorResult<数字>'.
                  Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(23,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(25,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterable<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterable<数字>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(28,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(32,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(34,7): error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
  Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(38,11): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(41,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(44,12): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(47,11): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(50,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(53,12): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(56,11): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(59,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(62,12): error TS2322: Type '"a"' is not assignable to type '数字'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(64,42): error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'IterableIterator<数字>'.
  Property '[Symbol.iterator]' is missing in type 'AsyncIterableIterator<任意>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(67,42): error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'Iterable<数字>'.
  Property '[Symbol.iterator]' is missing in type 'AsyncIterableIterator<任意>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(70,42): error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'Iterator<数字>'.
  Types of property 'next' are incompatible.
    Type '(value?: 任意) => Promise<IteratorResult<任意>>' is not assignable to type '(value?: 任意) => IteratorResult<数字>'.
      Type 'Promise<IteratorResult<任意>>' is not assignable to type 'IteratorResult<数字>'.
        Property 'done' is missing in type 'Promise<IteratorResult<任意>>'.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts(74,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.2.ts (24 errors) ====
    async function * inferReturnType1() {
        yield* {};
               ~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * inferReturnType2() {
        yield* inferReturnType2();
    }
    async function * inferReturnType3() {
        yield* Promise.resolve([1, 2]);
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    const assignability1: () => AsyncIterableIterator<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterableIterator<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterableIterator<数字>'.
!!! error TS2322:     Type '"a"' is not assignable to type '数字'.
        yield "a";
    };
    const assignability2: () => AsyncIterableIterator<number> = async function * () {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability3: () => AsyncIterableIterator<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterableIterator<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterableIterator<数字>'.
        yield* (async function * () { yield "a"; })();
    };
    const assignability4: () => AsyncIterable<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterable<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterable<数字>'.
!!! error TS2322:     Types of property '[Symbol.asyncIterator]' are incompatible.
!!! error TS2322:       Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
!!! error TS2322:         Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
!!! error TS2322:           Types of property 'next' are incompatible.
!!! error TS2322:             Type '(value?: 任意) => Promise<IteratorResult<"a">>' is not assignable to type '(value?: 任意) => Promise<IteratorResult<数字>>'.
!!! error TS2322:               Type 'Promise<IteratorResult<"a">>' is not assignable to type 'Promise<IteratorResult<数字>>'.
!!! error TS2322:                 Type 'IteratorResult<"a">' is not assignable to type 'IteratorResult<数字>'.
!!! error TS2322:                   Type '"a"' is not assignable to type '数字'.
        yield "a";
    };
    const assignability5: () => AsyncIterable<number> = async function * () {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability6: () => AsyncIterable<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterable<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterable<数字>'.
        yield* (async function * () { yield "a"; })();
    };
    const assignability7: () => AsyncIterator<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
        yield "a";
    };
    const assignability8: () => AsyncIterator<number> = async function * () {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability9: () => AsyncIterator<number> = async function * () {
          ~~~~~~~~~~~~~~
!!! error TS2322: Type '() => AsyncIterableIterator<"a">' is not assignable to type '() => AsyncIterator<数字>'.
!!! error TS2322:   Type 'AsyncIterableIterator<"a">' is not assignable to type 'AsyncIterator<数字>'.
        yield* (async function * () { yield "a"; })();
    };
    async function * explicitReturnType1(): AsyncIterableIterator<number> {
        yield "a";
              ~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType2(): AsyncIterableIterator<number> {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType3(): AsyncIterableIterator<number> {
        yield* (async function * () { yield "a"; })();
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType4(): AsyncIterable<number> {
        yield "a";
              ~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType5(): AsyncIterable<number> {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType6(): AsyncIterable<number> {
        yield* (async function * () { yield "a"; })();
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType7(): AsyncIterator<number> {
        yield "a";
              ~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType8(): AsyncIterator<number> {
        yield* ["a", "b"];
               ~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType9(): AsyncIterator<number> {
        yield* (async function * () { yield "a"; })();
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '"a"' is not assignable to type '数字'.
    }
    async function * explicitReturnType10(): IterableIterator<number> {
                                             ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'IterableIterator<数字>'.
!!! error TS2322:   Property '[Symbol.iterator]' is missing in type 'AsyncIterableIterator<任意>'.
        yield 1;
    }
    async function * explicitReturnType11(): Iterable<number> {
                                             ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'Iterable<数字>'.
!!! error TS2322:   Property '[Symbol.iterator]' is missing in type 'AsyncIterableIterator<任意>'.
        yield 1;
    }
    async function * explicitReturnType12(): Iterator<number> {
                                             ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'AsyncIterableIterator<任意>' is not assignable to type 'Iterator<数字>'.
!!! error TS2322:   Types of property 'next' are incompatible.
!!! error TS2322:     Type '(value?: 任意) => Promise<IteratorResult<任意>>' is not assignable to type '(value?: 任意) => IteratorResult<数字>'.
!!! error TS2322:       Type 'Promise<IteratorResult<任意>>' is not assignable to type 'IteratorResult<数字>'.
!!! error TS2322:         Property 'done' is missing in type 'Promise<IteratorResult<任意>>'.
        yield 1;
    }
    async function * yieldStar() {
        yield* {};
               ~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }